Added previous todos

--- a/styles/modify-todo.css
+++ b/styles/modify-todo.css
@@ -10,8 +10,13 @@ textarea {
   font-size: 24px;
 }
 
+.title {
+  font-weight: bold;
+  font-size: 76px;
+}
+
 .container {
-  margin-top: 200px;
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
