--- a/styles/modify-todo.css
+++ b/styles/modify-todo.css
@@ -70,6 +70,8 @@ textarea {
 }
 
 .added-message {
+  display: flex;
+  justify-content: center;
   margin-left: 30px;
   color: green;
 }
@@ -88,7 +90,7 @@ textarea {
 }
 
 .buttons-container {
-  margin: 5%;
+  margin: 5% 0;
   display: flex;
   justify-content: center;
   align-items: center;
